added new photo section - recent

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<link rel="author" href="humans.txt" />
 		<link rel="author" href="robots.txt" />
-	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,300italic,700italic' rel='stylesheet' type='text/css'>
 	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.css" rel="stylesheet">
 	<link rel="shortcut icon" href="img/logo.png"/>
 </head>
@@ -32,6 +32,7 @@
 		<nav class="nav nav-top slideDown" data-state="collasped">
 			<ul>
 				<li class="ease-all"><a href="#home">PORTFOLIO</a></li>
+				<li class="ease-all"><a href="#recent">RECENT</a></li>
 				<li class="ease-all"><a href="#about">ABOUT ME</a></li>
 				<li class="ease-all"><a href="#contact">CONTACT</a></li>
 			</ul>	
@@ -150,299 +151,143 @@
 					<img src="img/weday-dance-fingers.png" alt="inshar">
 				</li>
 				<li>
-					<img src="img/img-jem-1.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-penny.png" alt="eben">
-				</li>
-				<!--<li>
-					<img src="img/img-eddie-2.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-hodan-3.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/weday-francesco-yates-2.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-bicycler.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-iggy-4.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-eben-4.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-teganandsara.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-jillea.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-bab-1.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-maydayparade.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-hongkong.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-eben-3.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-nf-1.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-vans.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-inshar-1.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-noah.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-lammi.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-jem-1.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-eddie-1.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-inshar-2.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-model-1.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-penny.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/weday-shawn-hook-4.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-jem-4.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-eben-7.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/weday-jillea-1.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-converse.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-iggy-1.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-inshar-3.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/weday-jesse-gold.png" alt="eben">
-				</li>
-				<li>
 					<img src="img/img-amy-2.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-iggy-2.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-iggydancer.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-airdubai.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/weday-shawn-hook-1.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-eddie-3.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-eben-1.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-kelly-skate.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-iggydancers.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-eben-6.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-iggydancers-2.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/eben-7.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/weday-dance-fingers.png" alt="eben">
-				</li>-->
-				
-				<!--<li>
-					<img src="img/weday-francesco-yates-2.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-iggy-4.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-bicycler.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-food-brownie.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-biker.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-teganandsara.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-bab-2.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-food-macaroon.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-nf.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-eben-2.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-food-meat-pies.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-bab-1.png" alt="eben">
-				</li>
-				<li>
 					<img src="img/img-penny.png" alt="eben">
 				</li>
+			</ul>
+		</div>
+	</section>
+	<section id="recent">
+	<div class="recent">
+	<h1>Y U S S O · B L U E S F E S T / 2 0 1 6</h1>
+		</div>
+		</section>
+		<section id="portfolio" class="portfolio2 grid">
+			<div class="unit unit-s-1">
+  			<ul class="photos2">
 				<li>
-					<img src="img/img-airdubai.png" alt="eben">
+					<img src="img/yussobluesfest-2.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-eben-7.png" alt="eben">
+					<img src="img/yussobluesfest-1.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-hodan-3.png" alt="eben">
+					<img src="img/yussobluesfest-3.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-vans.png" alt="eben">
+					<img src="img/yussobluesfest-4.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/weday-jesse-gold.png" alt="eben">
+					<img src="img/yussobluesfest-5.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-lammi.png" alt="eben">
+					<img src="img/yussobluesfest-6.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-hodan-2.png" alt="eben">
+					<img src="img/yussobluesfest-7.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-noah.png" alt="eben">
+					<img src="img/yussobluesfest-8.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-jem-1.png" alt="eben">
+					<img src="img/yussobluesfest-9.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-eddie-1.png" alt="eben">
+					<img src="img/yussobluesfest-10.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-model-1.png" alt="eben">
+					<img src="img/yussobluesfest-11.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-maydayparade.png" alt="eben">
+					<img src="img/yussobluesfest-12.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-kelly.png" alt="eben">
+					<img src="img/yussobluesfest-13.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-eben-3.png" alt="eben">
+					<img src="img/yussobluesfest-14.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-amy.png" alt="eben">
+					<img src="img/yussobluesfest-15.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/weday-jillea-1.png" alt="eben">
+					<img src="img/yussobluesfest-16.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-victoria.png" alt="eben">
+					<img src="img/yussobluesfest-17.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-eben-5.png" alt="eben">
+					<img src="img/yussobluesfest-18.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-converse.png" alt="eben">
+					<img src="img/yussobluesfest-33.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-iggy-1.png" alt="eben">
+					<img src="img/yussobluesfest-34.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-amy-2.png" alt="eben">
+					<img src="img/yussobluesfest-35.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-v.png" alt="eben">
+					<img src="img/yussobluesfest-36.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-iggy-2.png" alt="eben">
+					<img src="img/yussobluesfest-28.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-bab-3.png" alt="eben">
+					<img src="img/yussobluesfest-19.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-hongkong.png" alt="eben">
+					<img src="img/yussobluesfest-20.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-eddie-2.png" alt="eben">
+					<img src="img/yussobluesfest-27.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-iggydancer.png" alt="eben">
+					<img src="img/yussobluesfest-22.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-jem-4.png" alt="eben">
+					<img src="img/yussobluesfest-23.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/weday-shawn-hook-1.png" alt="eben">
+					<img src="img/yussobluesfest-24.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-kelly-skate.png" alt="eben">
+					<img src="img/yussobluesfest-25.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-berries.png" alt="eben">
+					<img src="img/yussobluesfest-21.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-eben-1.png" alt="eben">
+					<img src="img/yussobluesfest-26.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-eddie-3.png" alt="eben">
+					<img src="img/yussobluesfest-37.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-eben-6.png" alt="eben">
+					<img src="img/yussobluesfest-29.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-iggydancers.png" alt="eben">
+					<img src="img/yussobluesfest-31.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/eben-7.png" alt="eben">
+					<img src="img/yussobluesfest-30.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-iggydancers-2.png" alt="eben">
-				</li>-->
+					<img src="img/yussobluesfest-32.png" alt="eben">
+				</li>
 			</ul>
 		</div>
 	</section>
 	
 	<section id="about" class="about grid">
 	<div class="intro unit unit-s-1">
-		<h1>HELLO &amp; WELCOME</h1>
-		<p><em>Katie "Kae" Situ</em> is a versatile photographer specializing in portrait, travel, and music photography. She currently resides in Ottawa, Canada, where she is currently focusing on photography and graphic design. She loves to travel and explore new places, but for now, you can find her binge watching shows, movies, and constantly listening to her favourite music.</p>
+		<h1>H E L L O</h1>
+		<p><em>katie "kae" situ</em> · photographer / graphic designer</p>
+		<p>residing in ottawa, canada · available worldwide for touring photographer!</p>
+		<p>music · travel · art</p>
 		<img src="img/profilephoto.png" alt="katie-situ">
 	</div>
 	</section>
