removed top btw

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 				<li><a href="https://www.vimeo.com/katiesitu"><i class="fa fa-vimeo-square"></i><span class="hide-text">Vimeo</span></a></li>
 				<li><a href="https://www.instagram.com/kaesphvto"><i class="fa fa-instagram"></i><span class="hide-text">Instagram</span></a></li>
 			</ul>
-			<a class="slideDown ease-all top-btn" href="#home"><img src="img/top.svg" alt="Top Button"></a>
+			<!--<a class="slideDown ease-all top-btn" href="#home"><img src="img/top.svg" alt="Top Button"></a>-->
 		</div>
 			<p>©2016 Katie Situ</p> 
 	</footer>
