added new photos for morris

--- a/index.html
+++ b/index.html
@@ -161,12 +161,42 @@
 	</section>
 	<section id="recent">
 	<div class="recent">
-	<h1>Y U S S O · B L U E S F E S T / 2 0 1 6</h1>
+	<h1>M O R R I S  O G B O W U · A R B O R E T U M  F E S T I V A L / 2 0 1 6</h1>
 		</div>
 		</section>
 		<section id="portfolio" class="portfolio2 grid">
 			<div class="unit unit-s-1">
   			<ul class="photos2">
+				<li>
+					<img src="img/morris-8.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/morris-2.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/morris-1.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/morris-4.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/morris-7.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/morris-5.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/morris-6.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/morris-10.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/morris-9.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/morris-3.png" alt="eben">
+				</li>
 				<li>
 					<img src="img/yussobluesfest-2.png" alt="eben">
 				</li>
