added slideshow for photos

--- a/404.html
+++ b/404.html
@@ -13,8 +13,8 @@
 <body>
 	<div class="error">
 		<h1>404</h1>
-		<h3>Oh no, there's nothing here.</h3>
-		<h4><strong>Click <a href="index.html" style="text-decoration: none">here</a> to go back!</strong></h4>
+		<h3><i>We couldn't find the page you were looking for.</i></h3>
+		<h3><i>Click <a href="index.html" style="text-decoration: none">here</a> to return to katiesitu.ca</i></h3>
 	</div>
 	
 	<script src="js/nav.js"></script>
