--- a/index.html
+++ b/index.html
@@ -160,43 +160,102 @@
 		</div>
 	</section>
 	<section id="recent">
-	<div class="recent">
-	<h1>M O R R I S  O G B O W U · A R B O R E T U M  F E S T I V A L / 2 0 1 6</h1>
+	<div class="prevnext">
+			<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+  			<a class="next" onclick="plusSlides(1)">&#10095;</a>
 		</div>
-		</section>
-		<section id="portfolio" class="portfolio2 grid">
-			<div class="unit unit-s-1">
-  			<ul class="photos2">
-				<li>
-					<img src="img/morris-8.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/morris-2.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/morris-1.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/morris-4.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/morris-7.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/morris-5.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/morris-6.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/morris-10.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/morris-9.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/morris-3.png" alt="eben">
-				</li>
+	<div class="slideshow-container">
+		<div class="mySlides fade">
+			<div class="recent">
+			<h1>M O R R I S · O G B O W U</h1>
+			<h1>A R B O R E T U M  F E S T I V A L / 2 0 1 6</h1>
+			</div>
+   			<div class="text">1 / 10</div>
+			<img src="img/morris-8.png">
+		</div>
+		<div class="mySlides fade">
+			<div class="recent">
+			<h1>M O R R I S · O G B O W U</h1>
+			<h1>A R B O R E T U M  F E S T I V A L / 2 0 1 6</h1>
+			</div>
+			<div class="text">2 / 10</div>
+    		<img src="img/morris-2.png">
+		</div>
+		<div class="mySlides fade">
+			<div class="recent">
+			<h1>M O R R I S · O G B O W U</h1>
+			<h1>A R B O R E T U M  F E S T I V A L / 2 0 1 6</h1>
+			</div>
+			<div class="text">3 / 10</div>
+    		<img src="img/morris-1.png">
+		</div>
+		<div class="mySlides fade">
+			<div class="recent">
+			<h1>M O R R I S · O G B O W U</h1>
+			<h1>A R B O R E T U M  F E S T I V A L / 2 0 1 6</h1>
+			</div>
+			<div class="text">4 / 10</div>
+    		<img src="img/morris-4.png">
+		</div>
+		<div class="mySlides fade">
+			<div class="recent">
+			<h1>M O R R I S · O G B O W U</h1>
+			<h1>A R B O R E T U M  F E S T I V A L / 2 0 1 6</h1>
+			</div>
+			<div class="text">5 / 10</div>
+    		<img src="img/morris-7.png">
+		</div>
+		<div class="mySlides fade">
+			<div class="recent">
+			<h1>M O R R I S · O G B O W U</h1>
+			<h1>A R B O R E T U M  F E S T I V A L / 2 0 1 6</h1>
+			</div>
+			<div class="text">6 / 10</div>
+    		<img src="img/morris-5.png">
+		</div>
+		<div class="mySlides fade">
+			<div class="recent">
+			<h1>M O R R I S · O G B O W U</h1>
+			<h1>A R B O R E T U M  F E S T I V A L / 2 0 1 6</h1>
+			</div>
+			<div class="text">7 / 10</div>
+    		<img src="img/morris-6.png">
+		</div>
+		<div class="mySlides fade">
+			<div class="recent">
+			<h1>M O R R I S · O G B O W U</h1>
+			<h1>A R B O R E T U M  F E S T I V A L / 2 0 1 6</h1>
+			</div>
+			<div class="text">8 / 10</div>
+    		<img src="img/morris-10.png">
+		</div>
+		<div class="mySlides fade">
+			<div class="recent">
+			<h1>M O R R I S · O G B O W U</h1>
+			<h1>A R B O R E T U M  F E S T I V A L / 2 0 1 6</h1>
+			</div>
+			<div class="text">9 / 10</div>
+    		<img src="img/morris-9.png">
+		</div>
+		<div class="mySlides fade">
+			<div class="recent">
+			<h1>M O R R I S · O G B O W U</h1>
+			<h1>A R B O R E T U M  F E S T I V A L / 2 0 1 6</h1>
+			</div>
+			<div class="text">10 / 10</div>
+    		<img src="img/morris-3.png">
+		</div>
+		<!--<div class="mySlides fade">
+			<div class="recent">
+			<h1>Y U S S O</h1>
+			<h1>B L U E S F E S T / 2 0 1 6</h1>
+			</div>
+			<div class="text">10 / 10</div>
+    		<img src="img/morris-3.png">
+		</div>-->
+	</div>
+	</section>
+	<!--
 				<li>
 					<img src="img/yussobluesfest-2.png" alt="eben">
 				</li>
@@ -310,7 +369,7 @@
 				</li>
 			</ul>
 		</div>
-	</section>
+	</section>-->
 	
 	<section id="about" class="about grid">
 	<div class="intro unit unit-s-1">
