--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 			<h1>M O R R I S · O G B O W U</h1>
 			<h1>A R B O R E T U M  F E S T I V A L / 2 0 1 6</h1>
 			</div>
-   			<div class="text">1 / 10</div>
+   			<div class="text">1 / 47</div>
 			<img src="img/morris-8.png">
 		</div>
 		<div class="mySlides fade">
@@ -178,7 +178,7 @@
 			<h1>M O R R I S · O G B O W U</h1>
 			<h1>A R B O R E T U M  F E S T I V A L / 2 0 1 6</h1>
 			</div>
-			<div class="text">2 / 10</div>
+			<div class="text">2 / 47</div>
     		<img src="img/morris-2.png">
 		</div>
 		<div class="mySlides fade">
@@ -186,7 +186,7 @@
 			<h1>M O R R I S · O G B O W U</h1>
 			<h1>A R B O R E T U M  F E S T I V A L / 2 0 1 6</h1>
 			</div>
-			<div class="text">3 / 10</div>
+			<div class="text">3 / 47</div>
     		<img src="img/morris-1.png">
 		</div>
 		<div class="mySlides fade">
@@ -194,7 +194,7 @@
 			<h1>M O R R I S · O G B O W U</h1>
 			<h1>A R B O R E T U M  F E S T I V A L / 2 0 1 6</h1>
 			</div>
-			<div class="text">4 / 10</div>
+			<div class="text">4 / 47</div>
     		<img src="img/morris-4.png">
 		</div>
 		<div class="mySlides fade">
@@ -202,7 +202,7 @@
 			<h1>M O R R I S · O G B O W U</h1>
 			<h1>A R B O R E T U M  F E S T I V A L / 2 0 1 6</h1>
 			</div>
-			<div class="text">5 / 10</div>
+			<div class="text">5 / 47</div>
     		<img src="img/morris-7.png">
 		</div>
 		<div class="mySlides fade">
@@ -210,7 +210,7 @@
 			<h1>M O R R I S · O G B O W U</h1>
 			<h1>A R B O R E T U M  F E S T I V A L / 2 0 1 6</h1>
 			</div>
-			<div class="text">6 / 10</div>
+			<div class="text">6 / 47</div>
     		<img src="img/morris-5.png">
 		</div>
 		<div class="mySlides fade">
@@ -218,7 +218,7 @@
 			<h1>M O R R I S · O G B O W U</h1>
 			<h1>A R B O R E T U M  F E S T I V A L / 2 0 1 6</h1>
 			</div>
-			<div class="text">7 / 10</div>
+			<div class="text">7 / 47</div>
     		<img src="img/morris-6.png">
 		</div>
 		<div class="mySlides fade">
@@ -226,7 +226,7 @@
 			<h1>M O R R I S · O G B O W U</h1>
 			<h1>A R B O R E T U M  F E S T I V A L / 2 0 1 6</h1>
 			</div>
-			<div class="text">8 / 10</div>
+			<div class="text">8 / 47</div>
     		<img src="img/morris-10.png">
 		</div>
 		<div class="mySlides fade">
@@ -234,7 +234,7 @@
 			<h1>M O R R I S · O G B O W U</h1>
 			<h1>A R B O R E T U M  F E S T I V A L / 2 0 1 6</h1>
 			</div>
-			<div class="text">9 / 10</div>
+			<div class="text">9 / 47</div>
     		<img src="img/morris-9.png">
 		</div>
 		<div class="mySlides fade">
@@ -242,17 +242,287 @@
 			<h1>M O R R I S · O G B O W U</h1>
 			<h1>A R B O R E T U M  F E S T I V A L / 2 0 1 6</h1>
 			</div>
-			<div class="text">10 / 10</div>
+			<div class="text">10 / 47</div>
     		<img src="img/morris-3.png">
 		</div>
-		<!--<div class="mySlides fade">
+		<div class="mySlides fade">
 			<div class="recent">
 			<h1>Y U S S O</h1>
 			<h1>B L U E S F E S T / 2 0 1 6</h1>
 			</div>
-			<div class="text">10 / 10</div>
-    		<img src="img/morris-3.png">
-		</div>-->
+			<div class="text">11 / 47</div>
+    		<img src="img/yussobluesfest-2.png">
+		</div>
+		<div class="mySlides fade">
+			<div class="recent">
+			<h1>Y U S S O</h1>
+			<h1>B L U E S F E S T / 2 0 1 6</h1>
+			</div>
+			<div class="text">12 / 47</div>
+    		<img src="img/yussobluesfest-1.png">
+		</div>
+		<div class="mySlides fade">
+			<div class="recent">
+			<h1>Y U S S O</h1>
+			<h1>B L U E S F E S T / 2 0 1 6</h1>
+			</div>
+			<div class="text">13 / 47</div>
+    		<img src="img/yussobluesfest-3.png">
+		</div><div class="mySlides fade">
+			<div class="recent">
+			<h1>Y U S S O</h1>
+			<h1>B L U E S F E S T / 2 0 1 6</h1>
+			</div>
+			<div class="text">14 / 47</div>
+    		<img src="img/yussobluesfest-4.png">
+		</div><div class="mySlides fade">
+			<div class="recent">
+			<h1>Y U S S O</h1>
+			<h1>B L U E S F E S T / 2 0 1 6</h1>
+			</div>
+			<div class="text">15 / 47</div>
+    		<img src="img/yussobluesfest-5.png">
+		</div><div class="mySlides fade">
+			<div class="recent">
+			<h1>Y U S S O</h1>
+			<h1>B L U E S F E S T / 2 0 1 6</h1>
+			</div>
+			<div class="text">16 / 47</div>
+    		<img src="img/yussobluesfest-6.png">
+		</div><div class="mySlides fade">
+			<div class="recent">
+			<h1>Y U S S O</h1>
+			<h1>B L U E S F E S T / 2 0 1 6</h1>
+			</div>
+			<div class="text">17 / 47</div>
+    		<img src="img/yussobluesfest-7.png">
+		</div><div class="mySlides fade">
+			<div class="recent">
+			<h1>Y U S S O</h1>
+			<h1>B L U E S F E S T / 2 0 1 6</h1>
+			</div>
+			<div class="text">18 / 47</div>
+    		<img src="img/yussobluesfest-8.png">
+		</div><div class="mySlides fade">
+			<div class="recent">
+			<h1>Y U S S O</h1>
+			<h1>B L U E S F E S T / 2 0 1 6</h1>
+			</div>
+			<div class="text">19 / 47</div>
+    		<img src="img/yussobluesfest-9.png">
+		</div><div class="mySlides fade">
+			<div class="recent">
+			<h1>Y U S S O</h1>
+			<h1>B L U E S F E S T / 2 0 1 6</h1>
+			</div>
+			<div class="text">20 / 47</div>
+    		<img src="img/yussobluesfest-10.png">
+		</div><div class="mySlides fade">
+			<div class="recent">
+			<h1>Y U S S O</h1>
+			<h1>B L U E S F E S T / 2 0 1 6</h1>
+			</div>
+			<div class="text">21 / 47</div>
+    		<img src="img/yussobluesfest-11.png">
+		</div><div class="mySlides fade">
+			<div class="recent">
+			<h1>Y U S S O</h1>
+			<h1>B L U E S F E S T / 2 0 1 6</h1>
+			</div>
+			<div class="text">22 / 47</div>
+    		<img src="img/yussobluesfest-12.png">
+		</div><div class="mySlides fade">
+			<div class="recent">
+			<h1>Y U S S O</h1>
+			<h1>B L U E S F E S T / 2 0 1 6</h1>
+			</div>
+			<div class="text">23 / 47</div>
+    		<img src="img/yussobluesfest-13.png">
+		</div><div class="mySlides fade">
+			<div class="recent">
+			<h1>Y U S S O</h1>
+			<h1>B L U E S F E S T / 2 0 1 6</h1>
+			</div>
+			<div class="text">24 / 47</div>
+    		<img src="img/yussobluesfest-14.png">
+		</div><div class="mySlides fade">
+			<div class="recent">
+			<h1>Y U S S O</h1>
+			<h1>B L U E S F E S T / 2 0 1 6</h1>
+			</div>
+			<div class="text">25 / 47</div>
+    		<img src="img/yussobluesfest-15.png">
+		</div><div class="mySlides fade">
+			<div class="recent">
+			<h1>Y U S S O</h1>
+			<h1>B L U E S F E S T / 2 0 1 6</h1>
+			</div>
+			<div class="text">26 / 47</div>
+    		<img src="img/yussobluesfest-16.png">
+		</div>
+		</div><div class="mySlides fade">
+			<div class="recent">
+			<h1>Y U S S O</h1>
+			<h1>B L U E S F E S T / 2 0 1 6</h1>
+			</div>
+			<div class="text">27 / 47</div>
+    		<img src="img/yussobluesfest-17.png">
+		</div>
+		</div><div class="mySlides fade">
+			<div class="recent">
+			<h1>Y U S S O</h1>
+			<h1>B L U E S F E S T / 2 0 1 6</h1>
+			</div>
+			<div class="text">28 / 47</div>
+    		<img src="img/yussobluesfest-18.png">
+		</div>
+		</div><div class="mySlides fade">
+			<div class="recent">
+			<h1>Y U S S O</h1>
+			<h1>B L U E S F E S T / 2 0 1 6</h1>
+			</div>
+			<div class="text">29 / 47</div>
+    		<img src="img/yussobluesfest-33.png">
+		</div>
+		</div><div class="mySlides fade">
+			<div class="recent">
+			<h1>Y U S S O</h1>
+			<h1>B L U E S F E S T / 2 0 1 6</h1>
+			</div>
+			<div class="text">30 / 47</div>
+    		<img src="img/yussobluesfest-34.png">
+		</div>
+		</div><div class="mySlides fade">
+			<div class="recent">
+			<h1>Y U S S O</h1>
+			<h1>B L U E S F E S T / 2 0 1 6</h1>
+			</div>
+			<div class="text">31 / 47</div>
+    		<img src="img/yussobluesfest-35.png">
+		</div>
+		</div><div class="mySlides fade">
+			<div class="recent">
+			<h1>Y U S S O</h1>
+			<h1>B L U E S F E S T / 2 0 1 6</h1>
+			</div>
+			<div class="text">32 / 47</div>
+    		<img src="img/yussobluesfest-36.png">
+		</div>
+		</div><div class="mySlides fade">
+			<div class="recent">
+			<h1>Y U S S O</h1>
+			<h1>B L U E S F E S T / 2 0 1 6</h1>
+			</div>
+			<div class="text">33 / 47</div>
+    		<img src="img/yussobluesfest-28.png">
+		</div>
+		</div><div class="mySlides fade">
+			<div class="recent">
+			<h1>Y U S S O</h1>
+			<h1>B L U E S F E S T / 2 0 1 6</h1>
+			</div>
+			<div class="text">34 / 47</div>
+    		<img src="img/yussobluesfest-19.png">
+		</div>
+		</div><div class="mySlides fade">
+			<div class="recent">
+			<h1>Y U S S O</h1>
+			<h1>B L U E S F E S T / 2 0 1 6</h1>
+			</div>
+			<div class="text">35 / 47</div>
+    		<img src="img/yussobluesfest-20.png">
+		</div>
+		</div><div class="mySlides fade">
+			<div class="recent">
+			<h1>Y U S S O</h1>
+			<h1>B L U E S F E S T / 2 0 1 6</h1>
+			</div>
+			<div class="text">36 / 47</div>
+    		<img src="img/yussobluesfest-27.png">
+		</div>
+		</div><div class="mySlides fade">
+			<div class="recent">
+			<h1>Y U S S O</h1>
+			<h1>B L U E S F E S T / 2 0 1 6</h1>
+			</div>
+			<div class="text">37 / 47</div>
+    		<img src="img/yussobluesfest-22.png">
+		</div>
+		</div><div class="mySlides fade">
+			<div class="recent">
+			<h1>Y U S S O</h1>
+			<h1>B L U E S F E S T / 2 0 1 6</h1>
+			</div>
+			<div class="text">38 / 47</div>
+    		<img src="img/yussobluesfest-23.png">
+		</div>
+		</div><div class="mySlides fade">
+			<div class="recent">
+			<h1>Y U S S O</h1>
+			<h1>B L U E S F E S T / 2 0 1 6</h1>
+			</div>
+			<div class="text">39 / 47</div>
+    		<img src="img/yussobluesfest-24.png">
+		</div>
+		</div><div class="mySlides fade">
+			<div class="recent">
+			<h1>Y U S S O</h1>
+			<h1>B L U E S F E S T / 2 0 1 6</h1>
+			</div>
+			<div class="text">40 / 47</div>
+    		<img src="img/yussobluesfest-25.png">
+		</div>
+		</div><div class="mySlides fade">
+			<div class="recent">
+			<h1>Y U S S O</h1>
+			<h1>B L U E S F E S T / 2 0 1 6</h1>
+			</div>
+			<div class="text">41 / 47</div>
+    		<img src="img/yussobluesfest-21.png">
+		</div>
+		</div><div class="mySlides fade">
+			<div class="recent">
+			<h1>Y U S S O</h1>
+			<h1>B L U E S F E S T / 2 0 1 6</h1>
+			</div>
+			<div class="text">42 / 47</div>
+    		<img src="img/yussobluesfest-26.png">
+		</div></div><div class="mySlides fade">
+			<div class="recent">
+			<h1>Y U S S O</h1>
+			<h1>B L U E S F E S T / 2 0 1 6</h1>
+			</div>
+			<div class="text">43 / 47</div>
+    		<img src="img/yussobluesfest-37.png">
+		</div></div><div class="mySlides fade">
+			<div class="recent">
+			<h1>Y U S S O</h1>
+			<h1>B L U E S F E S T / 2 0 1 6</h1>
+			</div>
+			<div class="text">44 / 47</div>
+    		<img src="img/yussobluesfest-29.png">
+		</div></div><div class="mySlides fade">
+			<div class="recent">
+			<h1>Y U S S O</h1>
+			<h1>B L U E S F E S T / 2 0 1 6</h1>
+			</div>
+			<div class="text">45 / 47</div>
+    		<img src="img/yussobluesfest-31.png">
+		</div></div><div class="mySlides fade">
+			<div class="recent">
+			<h1>Y U S S O</h1>
+			<h1>B L U E S F E S T / 2 0 1 6</h1>
+			</div>
+			<div class="text">46 / 47</div>
+    		<img src="img/yussobluesfest-30.png">
+		</div></div><div class="mySlides fade">
+			<div class="recent">
+			<h1>Y U S S O</h1>
+			<h1>B L U E S F E S T / 2 0 1 6</h1>
+			</div>
+			<div class="text">47 / 47</div>
+    		<img src="img/yussobluesfest-32.png">
+		</div>
 	</div>
 	</section>
 	<!--
@@ -353,7 +623,7 @@
 					<img src="img/yussobluesfest-26.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/yussobluesfest-37.png" alt="eben">
+					<img src="img/yussobluesfest-47.png" alt="eben">
 				</li>
 				<li>
 					<img src="img/yussobluesfest-29.png" alt="eben">
