--- a/index.html
+++ b/index.html
@@ -525,6 +525,42 @@
 		</div>
 	</div>
 	</section>
+	<!--<section id="graphicdesign">
+		<div class="graphicdesign">
+			<img id="myImg" src="img/morris-2.png" alt="Trolltunga, Norway">
+	-->
+<!-- The Modal -->
+<div id="myModal" class="modal">
+  <span class="close">×</span>
+  <img class="modal-content" id="img01">
+  <div id="caption"></div>
+</div>
+
+<script>
+// Get the modal
+var modal = document.getElementById('myModal');
+
+// Get the image and insert it inside the modal - use its "alt" text as a caption
+var img = document.getElementById('myImg');
+var modalImg = document.getElementById("img01");
+var captionText = document.getElementById("caption");
+img.onclick = function(){
+    modal.style.display = "block";
+    modalImg.src = this.src;
+    modalImg.alt = this.alt;
+    captionText.innerHTML = this.alt;
+}
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() {
+    modal.style.display = "none";
+}
+</script>
+		</div>
+	</section>
 	<section id="about" class="about grid">
 	<div class="intro unit unit-s-1">
 		<h1>H E L L O</h1>
