added new photos and sections

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<link rel="author" href="humans.txt" />
 		<link rel="author" href="robots.txt" />
-	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,300italic,700italic' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,300italic,100italic,700italic' rel='stylesheet' type='text/css'>
 	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.css" rel="stylesheet">
 	<link rel="shortcut icon" href="img/logo.png"/>
 </head>
@@ -31,10 +31,11 @@
 		</div>
 		<nav class="nav nav-top slideDown" data-state="collasped">
 			<ul>
-				<li class="ease-all"><a href="#home">PORTFOLIO</a></li>
-				<li class="ease-all"><a href="#recent">RECENT</a></li>
-				<li class="ease-all"><a href="#about">ABOUT ME</a></li>
-				<li class="ease-all"><a href="#contact">CONTACT</a></li>
+				<li class="ease-all"><a href="#home">P O R T F O L I O</a></li>
+				<!--<li class="ease-all"><a href="#recent">R E C E N T</a></li>-->
+				<li class="ease-all"><a href="#portrait">O T H E R</a></li>
+				<li class="ease-all"><a href="#about">A B O U T &nbsp; M E</a></li>
+				<li class="ease-all"><a href="#contact">C O N T A C T</a></li>
 			</ul>	
 		</nav>
 	</section>
@@ -43,6 +44,84 @@
 		<!--<img class="main-logo" src="img/logo2.svg" alt="Logo">-->
 	</section>
 	<section id="portfolio" class="portfolio grid">
+			<div class="unit unit-s-1">
+  			<ul class="photos">
+				<li>
+					<img src="img/img-inshar-5.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/yussobluesfest-6.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-eddie-2.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-inshar-7.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-iggydancers.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-iggy-2.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-iggydancer.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/morris-2.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/yussobluesfest-15.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/yussobluesfest-19.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/yussobluesfest-31.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/yussobluesfest-32.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-teganandsara.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/yussobluesfest-35.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-eddie-5.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/yussobluesfest-24.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/weday-shawn-hook-4.png" alt="eben">
+				</li>
+			<li>
+					<img src="img/img-airdubai.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/weday-shawn-hook-1.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/weday-francesco-yates-2.png" alt="inshar">
+				</li>
+				<li>
+					<img src="img/weday-jillea-1.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/img-maydayparade.png" alt="eben">
+				</li>
+				<li>
+					<img src="img/weday-dance-fingers.png" alt="inshar">
+				</li>
+				<li>
+					<img src="img/yussobluesfest-37.png" alt="eben">
+				</li>
+			</ul>
+		</div>
+	</section>
+	<!--<section id="portrait" class="portrait grid">
 			<div class="unit unit-s-1">
   			<ul class="photos">
 				<li>
@@ -158,8 +237,8 @@
 				</li>
 			</ul>
 		</div>
-	</section>
-	<section id="recent">
+	</section>-->
+	<section id="portrait">
 	<div class="prevnext">
 			<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
   			<a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -167,80 +246,160 @@
 	<div class="slideshow-container">
 		<div class="mySlides fade">
 			<div class="recent">
-			<h1>M O R R I S · O G B O W U</h1>
-			<h1>A R B O R E T U M  F E S T I V A L / 2 0 1 6</h1>
+			<h1>&nbsp;</h1>
+			<h1>P O R T R A I T &nbsp;/&nbsp; N A T U R E</h1>
+			</div>
+   			<div class="text">1 / 9</div>
+			<img src="img/img-inshar-333.png">
+		</div>
+		<div class="mySlides fade">
+			<div class="recent">
+			<h1>&nbsp;</h1>
+			<h1>P O R T R A I T &nbsp;/&nbsp; N A T U R E</h1>
+			</div>
+   			<div class="text">2 / 9</div>
+			<img src="img/img-hodan-3.png">
+		</div>
+		<div class="mySlides fade">
+			<div class="recent">
+			<h1>&nbsp;</h1>
+			<h1>P O R T R A I T &nbsp;/&nbsp; N A T U R E</h1>
+			</div>
+   			<div class="text">3 / 9</div>
+			<img src="img/img-eben-3.png">
+		</div>
+		<div class="mySlides fade">
+			<div class="recent">
+			<h1>&nbsp;</h1>
+			<h1>P O R T R A I T &nbsp;/&nbsp; N A T U R E</h1>
+			</div>
+   			<div class="text">4 / 9</div>
+			<img src="img/img-model-1.png">
+		</div>
+		<div class="mySlides fade">
+			<div class="recent">
+			<h1>&nbsp;</h1>
+			<h1>P O R T R A I T &nbsp;/&nbsp; N A T U R E</h1>
+			</div>
+   			<div class="text">5 / 9</div>
+			<img src="img/img-nf-1.png">
+		</div>
+		<div class="mySlides fade">
+			<div class="recent">
+			<h1>&nbsp;</h1>
+			<h1>P O R T R A I T &nbsp;/&nbsp; N A T U R E</h1>
+			</div>
+   			<div class="text">6 / 9</div>
+			<img src="img/img-hongkong-5.png">
+		</div>
+		<div class="mySlides fade">
+			<div class="recent">
+			<h1>&nbsp;</h1>
+			<h1>P O R T R A I T &nbsp;/&nbsp; N A T U R E</h1>
+			</div>
+   			<div class="text">7 / 9</div>
+			<img src="img/yuuri-4.png">
+		</div>
+		<div class="mySlides fade">
+			<div class="recent">
+			<h1>&nbsp;</h1>
+			<h1>P O R T R A I T &nbsp;/&nbsp; N A T U R E</h1>
+			</div>
+   			<div class="text">8 / 9</div>
+			<img src="img/img-kelly-2.png">
+		</div>
+		<div class="mySlides fade">
+			<div class="recent">
+			<h1>&nbsp;</h1>
+			<h1>P O R T R A I T &nbsp;/&nbsp; N A T U R E</h1>
+			</div>
+   			<div class="text">9 / 9</div>
+			<img src="img/frankie-3.png">
+		</div>
+	</div>
+	</section>
+	<!--<section id="recent">
+	<div class="prevnext">
+			<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+  			<a class="next" onclick="plusSlides(1)">&#10095;</a>
+		</div>
+	<div class="slideshow-container">
+		<div class="mySlides fade">
+			<div class="recent">
+			<h1>M O R R I S &nbsp; O G B O W U</h1>
+			<h1>A R B O R E T U M &nbsp; F E S T I V A L &nbsp; 2 0 1 6</h1>
 			</div>
    			<div class="text">1 / 47</div>
 			<img src="img/morris-8.png">
 		</div>
 		<div class="mySlides fade">
 			<div class="recent">
-			<h1>M O R R I S · O G B O W U</h1>
-			<h1>A R B O R E T U M  F E S T I V A L / 2 0 1 6</h1>
+			<h1>M O R R I S &nbsp; O G B O W U</h1>
+			<h1>A R B O R E T U M &nbsp; F E S T I V A L &nbsp; 2 0 1 6</h1>
 			</div>
 			<div class="text">2 / 47</div>
     		<img src="img/morris-2.png">
 		</div>
 		<div class="mySlides fade">
 			<div class="recent">
-			<h1>M O R R I S · O G B O W U</h1>
-			<h1>A R B O R E T U M  F E S T I V A L / 2 0 1 6</h1>
+			<h1>M O R R I S &nbsp; O G B O W U</h1>
+			<h1>A R B O R E T U M &nbsp; F E S T I V A L &nbsp; 2 0 1 6</h1>
 			</div>
 			<div class="text">3 / 47</div>
     		<img src="img/morris-1.png">
 		</div>
 		<div class="mySlides fade">
 			<div class="recent">
-			<h1>M O R R I S · O G B O W U</h1>
-			<h1>A R B O R E T U M  F E S T I V A L / 2 0 1 6</h1>
+			<h1>M O R R I S &nbsp; O G B O W U</h1>
+			<h1>A R B O R E T U M &nbsp; F E S T I V A L &nbsp; 2 0 1 6</h1>
 			</div>
 			<div class="text">4 / 47</div>
     		<img src="img/morris-4.png">
 		</div>
 		<div class="mySlides fade">
 			<div class="recent">
-			<h1>M O R R I S · O G B O W U</h1>
-			<h1>A R B O R E T U M  F E S T I V A L / 2 0 1 6</h1>
+			<h1>M O R R I S &nbsp; O G B O W U</h1>
+			<h1>A R B O R E T U M &nbsp; F E S T I V A L &nbsp; 2 0 1 6</h1>
 			</div>
 			<div class="text">5 / 47</div>
     		<img src="img/morris-7.png">
 		</div>
 		<div class="mySlides fade">
 			<div class="recent">
-			<h1>M O R R I S · O G B O W U</h1>
-			<h1>A R B O R E T U M  F E S T I V A L / 2 0 1 6</h1>
+			<h1>M O R R I S &nbsp; O G B O W U</h1>
+			<h1>A R B O R E T U M &nbsp; F E S T I V A L &nbsp; 2 0 1 6</h1>
 			</div>
 			<div class="text">6 / 47</div>
     		<img src="img/morris-5.png">
 		</div>
 		<div class="mySlides fade">
 			<div class="recent">
-			<h1>M O R R I S · O G B O W U</h1>
-			<h1>A R B O R E T U M  F E S T I V A L / 2 0 1 6</h1>
+			<h1>M O R R I S &nbsp; O G B O W U</h1>
+			<h1>A R B O R E T U M &nbsp; F E S T I V A L &nbsp; 2 0 1 6</h1>
 			</div>
 			<div class="text">7 / 47</div>
     		<img src="img/morris-6.png">
 		</div>
 		<div class="mySlides fade">
 			<div class="recent">
-			<h1>M O R R I S · O G B O W U</h1>
-			<h1>A R B O R E T U M  F E S T I V A L / 2 0 1 6</h1>
+			<h1>M O R R I S &nbsp; O G B O W U</h1>
+			<h1>A R B O R E T U M &nbsp; F E S T I V A L &nbsp; 2 0 1 6</h1>
 			</div>
 			<div class="text">8 / 47</div>
     		<img src="img/morris-10.png">
 		</div>
 		<div class="mySlides fade">
 			<div class="recent">
-			<h1>M O R R I S · O G B O W U</h1>
-			<h1>A R B O R E T U M  F E S T I V A L / 2 0 1 6</h1>
+			<h1>M O R R I S &nbsp; O G B O W U</h1>
+			<h1>A R B O R E T U M &nbsp; F E S T I V A L &nbsp; 2 0 1 6</h1>
 			</div>
 			<div class="text">9 / 47</div>
     		<img src="img/morris-9.png">
 		</div>
 		<div class="mySlides fade">
 			<div class="recent">
-			<h1>M O R R I S · O G B O W U</h1>
-			<h1>A R B O R E T U M  F E S T I V A L / 2 0 1 6</h1>
+			<h1>M O R R I S &nbsp; O G B O W U</h1>
+			<h1>A R B O R E T U M &nbsp; F E S T I V A L &nbsp; 2 0 1 6</h1>
 			</div>
 			<div class="text">10 / 47</div>
     		<img src="img/morris-3.png">
@@ -524,7 +683,7 @@
     		<img src="img/yussobluesfest-32.png">
 		</div>
 	</div>
-	</section>
+	</section>-->
 	<!--<section id="graphicdesign">
 		<div class="graphicdesign">
 			<img id="myImg" src="img/morris-2.png" alt="Trolltunga, Norway">
@@ -563,9 +722,11 @@ span.onclick = function() {
 	</section>
 	<section id="about" class="about grid">
 	<div class="intro unit unit-s-1">
-		<h1>H E L L O</h1>
-		<p><em>katie "kae" situ</em> · photographer / graphic designer</p>
+		<h1>hello,</h1>
+		<p><em>katie "kae" situ</em> · ( mainly music ) photographer / graphic designer</p>
 		<p>residing in ottawa, canada · available worldwide for touring photographer!</p>
+		<p>graphic design work coming soon!</p>
+		
 		<p>music · travel · art</p>
 		<img src="img/profilephoto.png" alt="katie-situ">
 	</div>
