--- a/index.html
+++ b/index.html
@@ -18,6 +18,19 @@
 	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,300italic,100italic,700italic' rel='stylesheet' type='text/css'>
 	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.css" rel="stylesheet">
 	<link rel="shortcut icon" href="img/logo.png"/>
+	
+<SCRIPT language="JavaScript"><!--
+/*********************************************************
+             GateKeeper v2.3 - by Joe Barta
+            http://www.pagetutor.com/keeper/
+     Permission is granted to freely use this script.
+**********************************************************/
+
+function GateKeeper() {
+   var password = prompt("Password required:", "");
+   if (password) { this.location.href = password + ".html"; }}
+
+//--></SCRIPT>
 </head>
 
 <body>
@@ -35,6 +48,8 @@
 				<!--<li class="ease-all"><a href="#recent">R E C E N T</a></li>-->
 				<li class="ease-all"><a href="#portrait">O T H E R</a></li>
 				<li class="ease-all"><a href="#about">A B O U T &nbsp; M E</a></li>
+				<li class="ease-all"><A HREF="javascript:{;}" onClick="GateKeeper(); return false">G R A P H I C &nbsp; D E S I G N</a></li>
+				<NOSCRIPT><FONT COLOR="#FF0000"><BR>Javascript is required to access this area. Yours seems to be disabled.</FONT></NOSCRIPT> 
 				<li class="ease-all"><a href="#contact">C O N T A C T</a></li>
 			</ul>	
 		</nav>
@@ -249,7 +264,15 @@
 			<h1>&nbsp;</h1>
 			<h1>P O R T R A I T &nbsp;/&nbsp; N A T U R E</h1>
 			</div>
-   			<div class="text">1 / 9</div>
+   			<div class="text">1 / 10</div>
+			<img src="img/img-hodan-5.png">
+		</div>
+		<div class="mySlides fade">
+			<div class="recent">
+			<h1>&nbsp;</h1>
+			<h1>P O R T R A I T &nbsp;/&nbsp; N A T U R E</h1>
+			</div>
+   			<div class="text">2 / 10</div>
 			<img src="img/img-inshar-333.png">
 		</div>
 		<div class="mySlides fade">
@@ -257,15 +280,7 @@
 			<h1>&nbsp;</h1>
 			<h1>P O R T R A I T &nbsp;/&nbsp; N A T U R E</h1>
 			</div>
-   			<div class="text">2 / 9</div>
-			<img src="img/img-hodan-3.png">
-		</div>
-		<div class="mySlides fade">
-			<div class="recent">
-			<h1>&nbsp;</h1>
-			<h1>P O R T R A I T &nbsp;/&nbsp; N A T U R E</h1>
-			</div>
-   			<div class="text">3 / 9</div>
+   			<div class="text">3 / 10</div>
 			<img src="img/img-eben-3.png">
 		</div>
 		<div class="mySlides fade">
@@ -273,7 +288,7 @@
 			<h1>&nbsp;</h1>
 			<h1>P O R T R A I T &nbsp;/&nbsp; N A T U R E</h1>
 			</div>
-   			<div class="text">4 / 9</div>
+   			<div class="text">4 / 10</div>
 			<img src="img/img-model-1.png">
 		</div>
 		<div class="mySlides fade">
@@ -281,7 +296,7 @@
 			<h1>&nbsp;</h1>
 			<h1>P O R T R A I T &nbsp;/&nbsp; N A T U R E</h1>
 			</div>
-   			<div class="text">5 / 9</div>
+   			<div class="text">5 / 10</div>
 			<img src="img/img-nf-1.png">
 		</div>
 		<div class="mySlides fade">
@@ -289,7 +304,7 @@
 			<h1>&nbsp;</h1>
 			<h1>P O R T R A I T &nbsp;/&nbsp; N A T U R E</h1>
 			</div>
-   			<div class="text">6 / 9</div>
+   			<div class="text">6 / 10</div>
 			<img src="img/img-hongkong-5.png">
 		</div>
 		<div class="mySlides fade">
@@ -297,7 +312,7 @@
 			<h1>&nbsp;</h1>
 			<h1>P O R T R A I T &nbsp;/&nbsp; N A T U R E</h1>
 			</div>
-   			<div class="text">7 / 9</div>
+   			<div class="text">7 / 10</div>
 			<img src="img/yuuri-4.png">
 		</div>
 		<div class="mySlides fade">
@@ -305,7 +320,7 @@
 			<h1>&nbsp;</h1>
 			<h1>P O R T R A I T &nbsp;/&nbsp; N A T U R E</h1>
 			</div>
-   			<div class="text">8 / 9</div>
+   			<div class="text">8 / 10</div>
 			<img src="img/img-kelly-2.png">
 		</div>
 		<div class="mySlides fade">
@@ -313,8 +328,16 @@
 			<h1>&nbsp;</h1>
 			<h1>P O R T R A I T &nbsp;/&nbsp; N A T U R E</h1>
 			</div>
-   			<div class="text">9 / 9</div>
+   			<div class="text">9 / 10</div>
 			<img src="img/frankie-3.png">
+		</div>
+		<div class="mySlides fade">
+			<div class="recent">
+			<h1>&nbsp;</h1>
+			<h1>P O R T R A I T &nbsp;/&nbsp; N A T U R E</h1>
+			</div>
+   			<div class="text">10 / 10</div>
+			<img src="img/img-hodan-3.png">
 		</div>
 	</div>
 	</section>
