--- a/index.html
+++ b/index.html
@@ -18,19 +18,6 @@
 	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,300italic,100italic,700italic' rel='stylesheet' type='text/css'>
 	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.css" rel="stylesheet">
 	<link rel="shortcut icon" href="img/logo.png"/>
-	
-<SCRIPT language="JavaScript"><!--
-/*********************************************************
-             GateKeeper v2.3 - by Joe Barta
-            http://www.pagetutor.com/keeper/
-     Permission is granted to freely use this script.
-**********************************************************/
-
-function GateKeeper() {
-   var password = prompt("Password required:", "");
-   if (password) { this.location.href = password + ".html"; }}
-
-//--></SCRIPT>
 </head>
 
 <body>
@@ -48,8 +35,7 @@ function GateKeeper() {
 				<!--<li class="ease-all"><a href="#recent">R E C E N T</a></li>-->
 				<li class="ease-all"><a href="#portrait">O T H E R</a></li>
 				<li class="ease-all"><a href="#about">A B O U T &nbsp; M E</a></li>
-				<li class="ease-all"><A HREF="javascript:{;}" onClick="GateKeeper(); return false">G R A P H I C &nbsp; D E S I G N</a></li>
-				<NOSCRIPT><FONT COLOR="#FF0000"><BR>Javascript is required to access this area. Yours seems to be disabled.</FONT></NOSCRIPT> 
+				<!--<li class="ease-all"><a href="graphic-design.html">G R A P H I C &nbsp; D E S I G N</a></li>-->
 				<li class="ease-all"><a href="#contact">C O N T A C T</a></li>
 			</ul>	
 		</nav>
