added content to gd page

--- a/graphic-design.html
+++ b/graphic-design.html
@@ -43,76 +43,19 @@
 			<div class="unit unit-s-1">
   			<ul class="photos">
 				<li>
-					<img src="img/img-inshar-5.png" alt="eben">
+					<img src="img/img-graphicdesign-1.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/yussobluesfest-6.png" alt="eben">
+					<img src="img/img-graphicdesign-3.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-eddie-2.png" alt="eben">
+					<img src="img/img-graphicdesign-2.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-inshar-7.png" alt="eben">
+					<img src="img/img-graphicdesign-5.png" alt="eben">
 				</li>
 				<li>
-					<img src="img/img-iggydancers.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-iggy-2.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-iggydancer.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/morris-2.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/yussobluesfest-15.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/yussobluesfest-19.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/yussobluesfest-31.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/yussobluesfest-32.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-teganandsara.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/yussobluesfest-35.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-eddie-5.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/yussobluesfest-24.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/weday-shawn-hook-4.png" alt="eben">
-				</li>
-			<li>
-					<img src="img/img-airdubai.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/weday-shawn-hook-1.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/weday-francesco-yates-2.png" alt="inshar">
-				</li>
-				<li>
-					<img src="img/weday-jillea-1.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-maydayparade.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/weday-dance-fingers.png" alt="inshar">
-				</li>
-				<li>
-					<img src="img/yussobluesfest-37.png" alt="eben">
+					<img src="img/img-graphicdesign-4.png" alt="eben">
 				</li>
 			</ul>
 		</div>
