added new gd page

--- a/graphic-design.html
+++ b/graphic-design.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>KATIE SITU PHOTO</title>
+	<title>KATIE SITU GRAPHIC DESIGN</title>
 	<link href="css/main.css" rel="stylesheet">
 	<link rel="stylesheet" href="flexslider/flexslider.css" type="text/css">
 	<meta name="handheldfriendly" content="true">
@@ -23,7 +23,7 @@
 <body>
 
 	<section class="top">
-		<div class="nav-logo">
+		<div class="nav-logo nav-logo-gd">
 			<a class="small-logo" href="index.html"><img src="img/logo-1.svg" alt="Logo Navigation"></a>
 			<ul>
 				<li><a class="nav-btn hide-text" href="#nav">Navigation</a></li>
@@ -39,26 +39,51 @@
 	<section id="home" class="home">
 		<!--<img class="main-logo" src="img/logo2.svg" alt="Logo">-->
 	</section>
-	<section id="portfolio" class="portfolio grid">
-			<div class="unit unit-s-1">
-  			<ul class="photos">
-				<li>
-					<img src="img/img-graphicdesign-1.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-graphicdesign-3.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-graphicdesign-2.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-graphicdesign-5.png" alt="eben">
-				</li>
-				<li>
-					<img src="img/img-graphicdesign-4.png" alt="eben">
-				</li>
-			</ul>
+	<section id="portrait">
+	<div class="gd">
+		<div class="mySlides-gd">
+			<div class="recent-gd">
+			<h1>&nbsp;</h1>
+			<div>
+			<h1><i><strong>F T R S L</strong></i>
+			<h2>H E A R T B R E A K &nbsp;E P</i></h2>
+			</div>
+			</div>
+			<img src="img/img-graphicdesign-1.png">
 		</div>
+		<div class="mySlides-gd">
+			<div class="recent-gd">
+			<h1>&nbsp;</h1>
+			<h1><i><strong>F R A N K I E</strong></i>
+			<h2>U N D E R&nbsp;&nbsp;T H E&nbsp;&nbsp;M I S T L E T O E</i></h2>
+			</div>
+			<img src="img/img-graphicdesign-2.png">
+		</div>
+		<div class="mySlides-gd">
+			<div class="recent-gd">
+			<h1>&nbsp;</h1>
+			<h1><i><strong>I K H V N</strong></i></h1>
+			<h2>D E A T H&nbsp;&nbsp;A T&nbsp;&nbsp;T H E&nbsp;&nbsp;B O X&nbsp;&nbsp;O F F I C E&nbsp;&nbsp;E P</i></h2>
+			</div>
+			<img src="img/img-graphicdesign-3.png">
+		</div>
+		<div class="mySlides-gd">
+			<div class="recent-gd">
+			<h1>&nbsp;</h1>
+			<h1><i><strong>S O U N D&nbsp;&nbsp;9 3</strong></i></h1>
+			<h2>T O U R&nbsp;&nbsp;P O S T E R&nbsp;&nbsp;M O C K&nbsp;&nbsp;U P</i></h2>
+			</div>
+			<img src="img/img-graphicdesign-4.png">
+		</div>
+		<div class="mySlides-gd">
+			<div class="recent-gd">
+			<h1>&nbsp;</h1>
+			<h1><i><strong>F R A N K I E</strong></i></h1>
+			<h2>T A K E&nbsp;&nbsp;C A R E&nbsp;&nbsp;E P</i></h2>
+			</div>
+			<img src="img/img-graphicdesign-6.png">
+		</div>
+	</div>
 	</section>
 	
 	<footer id="contact" class="contact">
@@ -75,7 +100,7 @@
 			</ul>
 			<!--<a class="slideDown ease-all top-btn" href="#home"><img src="img/top.svg" alt="Top Button"></a>-->
 		</div>
-			<p>©2016 Katie Situ</p> 
+			<p>©2017 Katie Situ</p> 
 	</footer>
 
 	<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
