--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>KATIE SITU PHOTO</title>
+	<title>KATIE SITU</title>
 	<link href="css/main.css" rel="stylesheet">
 	<link rel="stylesheet" href="flexslider/flexslider.css" type="text/css">
 	<meta name="handheldfriendly" content="true">
@@ -31,11 +31,11 @@
 		</div>
 		<nav class="nav nav-top slideDown" data-state="collasped">
 			<ul>
-				<li class="ease-all"><a href="#home">P O R T F O L I O</a></li>
+				<li class="ease-all"><a href="#home">M U S I C</a></li>
 				<!--<li class="ease-all"><a href="#recent">R E C E N T</a></li>-->
-				<li class="ease-all"><a href="#portrait">O T H E R</a></li>
-				<li class="ease-all"><a href="#about">A B O U T &nbsp; M E</a></li>
-				<!--<li class="ease-all"><a href="graphic-design.html">G R A P H I C &nbsp; D E S I G N</a></li>-->
+				<li class="ease-all"><a href="#portrait">M I S C</a></li>
+				<li class="ease-all"><a href="#about">B I O</a></li>
+				<li class="ease-all"><a href="graphic-design.html">G R A P H I C &nbsp; D E S I G N</a></li>
 				<li class="ease-all"><a href="#contact">C O N T A C T</a></li>
 			</ul>	
 		</nav>
@@ -755,7 +755,7 @@ span.onclick = function() {
 			</ul>
 			<!--<a class="slideDown ease-all top-btn" href="#home"><img src="img/top.svg" alt="Top Button"></a>-->
 		</div>
-			<p>©2016 Katie Situ</p> 
+			<p>©2017 Katie Situ</p> 
 	</footer>
 	
 	<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
