--- a/graphic-design.html
+++ b/graphic-design.html
@@ -31,11 +31,7 @@
 		</div>
 		<nav class="nav nav-top slideDown" data-state="collasped">
 			<ul>
-				<li class="ease-all"><a href="#home">M U S I C</a></li>
-				<!--<li class="ease-all"><a href="#recent">R E C E N T</a></li>-->
-				<li class="ease-all"><a href="#portrait">M I S C</a></li>
-				<li class="ease-all"><a href="#about">B I O</a></li>
-				<li class="ease-all"><a href="graphic-design.html">G R A P H I C &nbsp; D E S I G N</a></li>
+				<li class="ease-all"><a href="index.html">H O M E</a></li>
 				<li class="ease-all"><a href="#contact">C O N T A C T</a></li>
 			</ul>	
 		</nav>
