added info to bio

--- a/index.html
+++ b/index.html
@@ -734,7 +734,7 @@ span.onclick = function() {
 		<h1>hello,</h1>
 		<p><em>katie "kae" situ</em> · ( mainly music ) photographer / graphic designer</p>
 		<p>residing in ottawa, canada · available worldwide for touring photographer!</p>
-		<p>graphic design work coming soon!</p>
+		<p>please check out my graphic design work · it's not much right now, but I got a few projects up!</p>
 		
 		<p>music · travel · art</p>
 		<img src="img/profilephoto.png" alt="katie-situ">
