added new photo

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<!--<li class="ease-all"><a href="#recent">R E C E N T</a></li>-->
 				<li class="ease-all"><a href="#portrait">M I S C</a></li>
 				<li class="ease-all"><a href="#about">B I O</a></li>
-				<li class="ease-all"><a href="graphic-design.html">G R A P H I C &nbsp; D E S I G N</a></li>
+				<li class="ease-all"><a href="graphic-design.html">D E S I G N</a></li>
 				<li class="ease-all"><a href="#contact">C O N T A C T</a></li>
 			</ul>	
 		</nav>
@@ -248,7 +248,7 @@
 		<div class="mySlides fade">
 			<div class="recent">
 			<h1>&nbsp;</h1>
-			<h1>P O R T R A I T &nbsp;/&nbsp; N A T U R E</h1>
+			<h1><i>H D N &nbsp;/&nbsp; 12 '17</i></h1>
 			</div>
    			<div class="text">1 / 10</div>
 			<img src="img/img-hodan-5.png">
@@ -256,7 +256,7 @@
 		<div class="mySlides fade">
 			<div class="recent">
 			<h1>&nbsp;</h1>
-			<h1>P O R T R A I T &nbsp;/&nbsp; N A T U R E</h1>
+			<h1><i>I K H V N &nbsp;/&nbsp; 02 '16</i></h1>
 			</div>
    			<div class="text">2 / 10</div>
 			<img src="img/img-inshar-333.png">
@@ -264,7 +264,7 @@
 		<div class="mySlides fade">
 			<div class="recent">
 			<h1>&nbsp;</h1>
-			<h1>P O R T R A I T &nbsp;/&nbsp; N A T U R E</h1>
+			<h1><i>E B E N &nbsp;/&nbsp; 08 '14</i></h1>
 			</div>
    			<div class="text">3 / 10</div>
 			<img src="img/img-eben-3.png">
@@ -272,15 +272,15 @@
 		<div class="mySlides fade">
 			<div class="recent">
 			<h1>&nbsp;</h1>
-			<h1>P O R T R A I T &nbsp;/&nbsp; N A T U R E</h1>
+			<h1><i>H D N &nbsp;/&nbsp; 12 '17</i></h1>
 			</div>
    			<div class="text">4 / 10</div>
-			<img src="img/img-model-1.png">
+			<img src="img/img-hodan-6.png">
 		</div>
 		<div class="mySlides fade">
 			<div class="recent">
 			<h1>&nbsp;</h1>
-			<h1>P O R T R A I T &nbsp;/&nbsp; N A T U R E</h1>
+			<h1><i>N I A G A R A &nbsp;/&nbsp; 06 '15</i></h1>
 			</div>
    			<div class="text">5 / 10</div>
 			<img src="img/img-nf-1.png">
@@ -288,7 +288,7 @@
 		<div class="mySlides fade">
 			<div class="recent">
 			<h1>&nbsp;</h1>
-			<h1>P O R T R A I T &nbsp;/&nbsp; N A T U R E</h1>
+			<h1><i>H K &nbsp;/&nbsp; 06 '12</i></h1>
 			</div>
    			<div class="text">6 / 10</div>
 			<img src="img/img-hongkong-5.png">
@@ -296,7 +296,7 @@
 		<div class="mySlides fade">
 			<div class="recent">
 			<h1>&nbsp;</h1>
-			<h1>P O R T R A I T &nbsp;/&nbsp; N A T U R E</h1>
+			<h1><i>Y U U R I &nbsp;/&nbsp; 03 '16</i></h1>
 			</div>
    			<div class="text">7 / 10</div>
 			<img src="img/yuuri-4.png">
@@ -304,7 +304,7 @@
 		<div class="mySlides fade">
 			<div class="recent">
 			<h1>&nbsp;</h1>
-			<h1>P O R T R A I T &nbsp;/&nbsp; N A T U R E</h1>
+			<h1><i>E L L Y &nbsp;/&nbsp; 02 '16</i></h1>
 			</div>
    			<div class="text">8 / 10</div>
 			<img src="img/img-kelly-2.png">
@@ -312,7 +312,7 @@
 		<div class="mySlides fade">
 			<div class="recent">
 			<h1>&nbsp;</h1>
-			<h1>P O R T R A I T &nbsp;/&nbsp; N A T U R E</h1>
+			<h1><i>F R N K I E &nbsp;/&nbsp; 02 '16</i></h1>
 			</div>
    			<div class="text">9 / 10</div>
 			<img src="img/frankie-3.png">
@@ -320,7 +320,7 @@
 		<div class="mySlides fade">
 			<div class="recent">
 			<h1>&nbsp;</h1>
-			<h1>P O R T R A I T &nbsp;/&nbsp; N A T U R E</h1>
+			<h1><i>H D N &nbsp;/&nbsp; 08 '14</i></h1>
 			</div>
    			<div class="text">10 / 10</div>
 			<img src="img/img-hodan-3.png">
